# vcaio-aiamf-workers

./: .gitignore  README.md  pyproject.toml  workers.py
src/: cli.py  config.py  core.py
src/agents/: architect.py  caio.py  finops.py  pm.py  trainer.py
src/client/: context.py
src/config/: client.yaml
src/services/: logging.py
